Refactor DTOs with Lombok and clean up unused imports
- Applied Lombok annotations (@Data, @Builder) to all DTO and Request classes.
- Removed manual getters, setters, and builder boilerplate.
- Fixed unused imports in ZPlusCounsellingApplication.java and AssessmentServiceTest.java.
- Optimized .gitignore to prevent accidental staging of .m2 and build artifacts.
- Fixed 36+ IDE warnings/problems.